--- a/trunk/GameView.xib
+++ b/trunk/GameView.xib
@@ -36,165 +36,6 @@
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIImageView" id="447124829">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{111, 197}, {137, 25}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">4</int>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">nameBoard.png</string>
-						</object>
-					</object>
-					<object class="IBUIImageView" id="977804510">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{83, 221}, {417, 99}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">4</int>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">board.png</string>
-						</object>
-					</object>
-					<object class="IBUILabel" id="328248317">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{122, 236}, {340, 71}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<object class="NSFont" key="IBUIFont" id="379998231">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">1.500000e+01</double>
-							<int key="NSfFlags">16</int>
-						</object>
-						<object class="NSColor" key="IBUITextColor" id="1030854474">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
-						</object>
-						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="1030854474"/>
-						<string key="IBUIShadowOffset">{-2, 2}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
-					<object class="IBUILabel" id="457235248">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{120, 236}, {340, 71}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="379998231"/>
-						<reference key="IBUITextColor" ref="1030854474"/>
-						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="1030854474"/>
-						<string key="IBUIShadowOffset">{2, 2}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
-					<object class="IBUILabel" id="585546747">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{121, 237}, {340, 71}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="379998231"/>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAxIDEAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="171223335">
-								<int key="NSID">1</int>
-							</object>
-						</object>
-						<nil key="IBUIHighlightedColor"/>
-						<object class="NSColor" key="IBUIShadowColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAgMAA</bytes>
-						</object>
-						<string key="IBUIShadowOffset">{1, 1}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
-					<object class="IBUILabel" id="1012968541">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{119, 198}, {120, 27}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="379998231"/>
-						<reference key="IBUITextColor" ref="1030854474"/>
-						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="1030854474"/>
-						<string key="IBUIShadowOffset">{2, -2}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
-					<object class="IBUILabel" id="710848373">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{119, 196}, {120, 27}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="379998231"/>
-						<reference key="IBUITextColor" ref="1030854474"/>
-						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="1030854474"/>
-						<string key="IBUIShadowOffset">{2, 2}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
-					<object class="IBUILabel" id="664862475">
-						<reference key="NSNextResponder" ref="773793330"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{120, 197}, {120, 27}}</string>
-						<reference key="NSSuperview" ref="773793330"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="379998231"/>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAxIDEAA</bytes>
-							<reference key="NSCustomColorSpace" ref="171223335"/>
-						</object>
-						<nil key="IBUIHighlightedColor"/>
-						<object class="NSColor" key="IBUIShadowColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAgMAA</bytes>
-						</object>
-						<string key="IBUIShadowOffset">{1, 1}</string>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">1.000000e+01</float>
-						<int key="IBUINumberOfLines">4</int>
-					</object>
 					<object class="IBUILabel" id="766416515">
 						<reference key="NSNextResponder" ref="773793330"/>
 						<int key="NSvFlags">292</int>
@@ -207,10 +48,15 @@
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEAA</bytes>
-							<reference key="NSCustomColorSpace" ref="171223335"/>
+							<object class="NSColorSpace" key="NSCustomColorSpace">
+								<int key="NSID">1</int>
+							</object>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
-						<reference key="IBUIShadowColor" ref="1030854474"/>
+						<object class="NSColor" key="IBUIShadowColor" id="1030854474">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						</object>
 						<string key="IBUIShadowOffset">{1, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">1.000000e+01</float>
@@ -470,14 +316,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">serihuLabel</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="585546747"/>
-					</object>
-					<int key="connectionID">52</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">selectPanel1</string>
 						<reference key="source" ref="773793330"/>
 						<reference key="destination" ref="227237488"/>
@@ -567,62 +405,6 @@
 					<int key="connectionID">95</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">serihuLabel2</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="328248317"/>
-					</object>
-					<int key="connectionID">97</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">serihuLabel3</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="457235248"/>
-					</object>
-					<int key="connectionID">99</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">charaLabel2</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="710848373"/>
-					</object>
-					<int key="connectionID">102</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">charaLabel3</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="1012968541"/>
-					</object>
-					<int key="connectionID">103</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">charaLabel</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="664862475"/>
-					</object>
-					<int key="connectionID">104</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">nameBoard</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="447124829"/>
-					</object>
-					<int key="connectionID">108</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">board</string>
-						<reference key="source" ref="773793330"/>
-						<reference key="destination" ref="977804510"/>
-					</object>
-					<int key="connectionID">109</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">ButtonClick:</string>
 						<reference key="source" ref="1030399220"/>
@@ -688,15 +470,7 @@
 							<reference ref="227237488"/>
 							<reference ref="137256979"/>
 							<reference ref="1031331646"/>
-							<reference ref="328248317"/>
-							<reference ref="457235248"/>
-							<reference ref="585546747"/>
-							<reference ref="447124829"/>
-							<reference ref="1012968541"/>
-							<reference ref="710848373"/>
-							<reference ref="664862475"/>
 							<reference ref="281874797"/>
-							<reference ref="977804510"/>
 							<reference ref="566087698"/>
 							<reference ref="699885363"/>
 						</object>
@@ -708,18 +482,8 @@
 						<reference key="parent" ref="773793330"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">49</int>
-						<reference key="object" ref="585546747"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">50</int>
 						<reference key="object" ref="766416515"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">53</int>
-						<reference key="object" ref="1012968541"/>
 						<reference key="parent" ref="773793330"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -763,11 +527,6 @@
 						<reference key="parent" ref="137256979"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">89</int>
-						<reference key="object" ref="977804510"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">90</int>
 						<reference key="object" ref="1031331646"/>
 						<object class="NSMutableArray" key="children">
@@ -788,31 +547,6 @@
 						<reference key="parent" ref="1031331646"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">96</int>
-						<reference key="object" ref="328248317"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">98</int>
-						<reference key="object" ref="457235248"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">100</int>
-						<reference key="object" ref="710848373"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">101</int>
-						<reference key="object" ref="664862475"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">107</int>
-						<reference key="object" ref="447124829"/>
-						<reference key="parent" ref="773793330"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">111</int>
 						<reference key="object" ref="699885363"/>
 						<reference key="parent" ref="773793330"/>
@@ -830,17 +564,13 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>-1.CustomClassName</string>
 					<string>-2.CustomClassName</string>
-					<string>100.IBPluginDependency</string>
-					<string>101.IBPluginDependency</string>
 					<string>111.IBPluginDependency</string>
 					<string>114.IBPluginDependency</string>
 					<string>2.CustomClassName</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
 					<string>46.IBPluginDependency</string>
-					<string>49.IBPluginDependency</string>
 					<string>50.IBPluginDependency</string>
-					<string>53.IBPluginDependency</string>
 					<string>69.IBPluginDependency</string>
 					<string>70.IBPluginDependency</string>
 					<string>71.IBPluginDependency</string>
@@ -850,8 +580,6 @@
 					<string>90.IBPluginDependency</string>
 					<string>91.IBPluginDependency</string>
 					<string>92.IBPluginDependency</string>
-					<string>96.IBPluginDependency</string>
-					<string>98.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -859,14 +587,8 @@
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>GameView</string>
 					<string>{{415, 153}, {480, 320}}</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -918,8 +640,17 @@
 					<string key="className">GameView</string>
 					<string key="superclassName">BaseView</string>
 					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">ButtonClick:</string>
-						<string key="NS.object.0">id</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSMutableArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>ButtonClick:</string>
+							<string>playAnime:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>NSString</string>
+						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -927,12 +658,8 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>blackBoard</string>
 							<string>board</string>
-							<string>charaLabel</string>
-							<string>charaLabel2</string>
-							<string>charaLabel3</string>
 							<string>debugLabel</string>
 							<string>menuButton</string>
-							<string>nameBoard</string>
 							<string>next</string>
 							<string>selectButton1</string>
 							<string>selectButton2</string>
@@ -943,19 +670,9 @@
 							<string>selectPanel1</string>
 							<string>selectPanel2</string>
 							<string>selectPanel3</string>
-							<string>serihuLabel</string>
-							<string>serihuLabel2</string>
-							<string>serihuLabel3</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
